Norbert Janssen has provided this fix for bug 690316.  Using the ufst font scaler apparently characters which are too large to be rendered as bitmaps (returned as paths) and normal charpath operations scaled y in the wrong direction.  We suspect this must be a change in the ufst as this functionality has passed previous tests.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9571 a1074d23-0009-0410-80fe-cf8c14f379e6